# QT-Notes

./: .gitignore  README.md
01-Basics/01-helloQT/: CMakeLists.txt  main.cpp
01-Basics/02-QObject/: CMakeLists.txt  main.cpp  test.cpp  test.h
01-Basics/03-QObjects-P2/: CMakeLists.txt  cat.cpp  main.cpp
01-Basics/04-Parent-child-relationship/: CMakeLists.txt  main.cpp  test.cpp  test.h
01-Basics/05-qDeleteAll/: CMakeLists.txt  main.cpp  test.cpp
01-Basics/06-Signals-and-Slots/: CMakeLists.txt  main.cpp  test.cpp  test.h
01-Basics/07-QObject-Disable-Copy/: CMakeLists.txt  main.cpp
01-Basics/08-QObject-Example/: CMakeLists.txt  counter.cpp  counter.h  main.cpp
01-Basics/09-Parent-child-FamilyTree/: CMakeLists.txt  main.cpp  test.cpp
01-Basics/10-Get-Parent-Children/: CMakeLists.txt  main.cpp
01-Basics/11-QScopedPointer/: CMakeLists.txt  main.cpp  test.cpp
01-Basics/12-QSharedPointer/: CMakeLists.txt  main.cpp  test.cpp  test.h
01-Basics/13-Assignment-Shared-Scope-Pointer/: CMakeLists.txt  main.cpp  test.cpp
01-Basics/build-01-helloQT-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
02-Collections/01-QList/: CMakeLists.txt  main.cpp
02-Collections/02-QVector/: CMakeLists.txt  main.cpp
02-Collections/03-QSet/: CMakeLists.txt  main.cpp
02-Collections/04-QMap/: CMakeLists.txt  main.cpp
02-Collections/05-qDeleteAll-QLists/: CMakeLists.txt  main.cpp  test.cpp
02-Collections/06-QSharedPointer-QList/: CMakeLists.txt  main.cpp  test.cpp  test.h
02-Collections/07-qDeleteAll-QMap/: CMakeLists.txt  main.cpp  test.cpp  test.h
02-Collections/08-QSharedPointer-Qmaps/: CMakeLists.txt  main.cpp
02-Collections/09-Assignment-Answer/: CMakeLists.txt  main.cpp
03-Views/01-QByteArrayView/: CMakeLists.txt  main.cpp
03-Views/02-QStringview/: CMakeLists.txt  main.cpp
03-Views/03-Assignment-Answer/: CMakeLists.txt  main.cpp  person.cpp  person.h
04-Settings/01-QSettings/: CMakeLists.txt  main.cpp
04-Settings/02-Creating-Groups/: CMakeLists.txt  main.cpp
04-Settings/03-Navigating-Groups/: CMakeLists.txt  main.cpp
04-Settings/04-Setting-Filename/: CMakeLists.txt  main.cpp
04-Settings/05-Assignment-Answer/: CMakeLists.txt  main.cpp
05-File-System/01-QIODevice/: CMakeLists.txt  main.cpp
05-File-System/02-Writing-files/: CMakeLists.txt  main.cpp
05-File-System/03-Appending-files/: CMakeLists.txt  main.cpp
05-File-System/04-Reading-files/: CMakeLists.txt  main.cpp
05-File-System/05-Reading-Large-Files/: CMakeLists.txt  main.cpp
05-File-System/06-QTextStream/: CMakeLists.txt  main.cpp
05-File-System/07-QDataStream/: CMakeLists.txt  main.cpp
05-File-System/08-Directories-QDir/: CMakeLists.txt  main.cpp
05-File-System/09-Navigate-Directories-Recursively/: CMakeLists.txt  main.cpp
05-File-System/10-Get-file-info-QFileInfo/: CMakeLists.txt  main.cpp
05-File-System/11-QStorageInfo/: CMakeLists.txt  main.cpp
05-File-System/12-QLockFile/: CMakeLists.txt  main.cpp
05-File-System/13-Assignment-Answer/: CMakeLists.txt  main.cpp
06-Debug/01-QDebug-QtMessageHandler/: CMakeLists.txt  main.cpp
06-Debug/02-Logger-class/: CMakeLists.txt  logger.cpp  logger.h  main.cpp  test.h
06-Debug/03-Message-categories/: CMakeLists.txt  main.cpp
06-Debug/04-QLoggingCategory/: CMakeLists.txt  main.cpp
06-Debug/05-Assignment-Answer/: main.cpp
07-Encoding-Compression-Serialization/01-ASCII/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/02-UTF8/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/03-UTF16/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/04-Base-64/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/05-Hex/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/06-Assignment-Encoding-Answer/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/07-Data-compression/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/08-File-compression/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/09-Compression-Assignment/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/10Serialize-deserialize-data/: CMakeLists.txt  main.cpp
07-Encoding-Compression-Serialization/11-Serialize-class/: CMakeLists.txt  main.cpp  test.cpp  test.h
07-Encoding-Compression-Serialization/12-Serialize-JSON/: CMakeLists.txt  main.cpp  test.cpp
07-Encoding-Compression-Serialization/13-Serialize-XML/: CMakeLists.txt  converter.cpp  converter.h  main.cpp
07-Encoding-Compression-Serialization/14-Serialize-Assignment/: CMakeLists.txt  main.cpp
08-Algorithms-Macros-And-Operating-System/01-Filling-Container/: CMakeLists.txt
08-Algorithms-Macros-And-Operating-System/02-Sorting-Containers/: CMakeLists.txt  main.cpp
08-Algorithms-Macros/01-Filling-Container/: main.cpp
08-Algorithms-Macros/03-Comparing-Containers/: CMakeLists.txt  main.cpp
08-Algorithms-Macros/04-Copy/: CMakeLists.txt  main.cpp
08-Algorithms-Macros/05-TypeDef/: CMakeLists.txt  main.cpp
08-Algorithms-Macros/06-Assignment-Macros/: CMakeLists.txt  main.cpp
09-OS/01-Os-Details-QSysInfo/: CMakeLists.txt  main.cpp
09-OS/02-QProcess/: CMakeLists.txt  main.cpp
09-OS/03-Exit-Code/: CMakeLists.txt  main.cpp
09-OS/04-Process-custom-commands/: CMakeLists.txt  main.cpp
09-OS/05-Aplication-lifecycle/: CMakeLists.txt  main.cpp
09-OS/06-Assignment-Answer/: CMakeLists.txt  main.cpp
10-Timers/01-Timers/: CMakeLists.txt  main.cpp
10-Timers/02-Intervals/: CMakeLists.txt  main.cpp  test.cpp  test.h
10-Timers/03-File-system-watcher/: CMakeLists.txt  watcher.cpp  watcher.h
10-Timers/04-Process-timeout/: CMakeLists.txt  main.cpp
11-Threads/04-Concurrent/: CMakeLists.txt  main.cpp
11-Threads/05-Assignment-Answer-1/: CMakeLists.txt  main.cpp
(+26 files in other folders)
